--- a/src/main/resources/templates/AdminSignIn.html
+++ b/src/main/resources/templates/AdminSignIn.html
@@ -50,6 +50,6 @@
         </div>
     </form>
 </div>
-<script th:src="@{/js/adminSignIn.js}"></script>
+<script th:src="@{/js/Sign_In/Up/adminSignIn.js}"></script>
 </body>
 </html>
