--- a/src/main/resources/templates/AdminSignUp.html
+++ b/src/main/resources/templates/AdminSignUp.html
@@ -30,6 +30,6 @@
         </div>
     </form>
 </div>
-<script th:src="@{/js/login.js}"></script>
+<script th:src="@{/js/Sign_In/Up/login.js}"></script>
 </body>
 </html>
