--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .header {
-    height: 100%;
+    height: 60px;
     background-color: #f9e5cf;
     display: flex;
     justify-content: space-between;
@@ -518,9 +518,8 @@ button:hover {
     position: relative;
     height: 950px;
     width: 1200px;
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-rows: 2fr 5.5fr 3fr;
+    display: flex;
+    flex-direction: column;
 }
 
 .footer-center-buttons {
@@ -558,7 +557,7 @@ button:hover {
 }
 
 .footer {
-    height: 100%;
+    height: 87px;
     display: grid;
     grid-template-columns: 1.75fr 0.75fr 0.75fr 3.75fr 0.75fr 0.75fr 0.75fr 0.75fr;
     width: 100%;
@@ -661,6 +660,12 @@ button:hover {
     font-size: 0.8em;
 }
 
+.sales-summary-setting {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
 .yearly-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -750,4 +755,106 @@ button:hover {
 
 .selected {
     background-color: #f0f8ff;
+}
+
+.sales-summary-setting {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+.sales-contents {
+    display: flex;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+td.right {
+    text-align: right;
+}
+
+td.left {
+    text-align: left;
+}
+
+.sales-summary-header {
+    width: 900px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sales-summary-payment {
+    flex: 0.8;
+    height: 100%;
+    border: 1px solid black;
+    border-radius: 10px;
+    border-spacing: 0;
+}
+
+.payment-summary-table {
+    width: 100%;
+    height: 100%;
+    border-collapse: collapse;
+}
+
+.sales-contents {
+    display: flex;
+    gap: 1rem;
+    height: 730px;
+}
+
+.payment-summary-table td {
+    padding: 0 10px;
+}
+
+.payment-summary-table tr:nth-child(1),
+.payment-summary-table tr:nth-child(3),
+.payment-summary-table tr:nth-child(5),
+.payment-summary-table tr:nth-child(7),
+.payment-summary-table tr:nth-child(8),
+.payment-summary-table tr:nth-child(14)
+{
+    border-bottom: 1px solid black;
+}
+
+.all-summary,
+.search-btn,
+.print-btn {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #ff8c8c;
+    border-radius: 10px;
+    background-color: #fcc4c4;
+    padding: 0;
+}
+
+.sales-summary-menu {
+    flex: 1.2;
+    height: 100%;
+    border: 1px solid black;
+    border-collapse: collapse;
+    overflow: auto;
+}
+
+.summary-date-input {
+    height: 50px;
+    border: 1px solid #ddd;
+    padding: 0 10px;
+    border-radius: 10px;
+}
+
+.menu-summary-table {
+    width: 100%;
+    border: 1px solid black;
+    text-align: center;
+    border-collapse: collapse;
+    padding: 0;
+}
+
+.menu-summary-table tr,
+.menu-summary-table td,
+.menu-summary-table th{
+    border: 1px solid black;
+    height: 30px;
 }
