--- a/src/main/resources/templates/AdminSignInUI.html
+++ b/src/main/resources/templates/AdminSignInUI.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="input-group">
-            <i class="fas fa-user"></i>
+            <i class="fas fa-admin"></i>
             <input type="text" id="username" placeholder="아이디" required>
         </div>
 
@@ -50,6 +50,6 @@
         </div>
     </form>
 </div>
-<script th:src="@{/js/Sign_In/Up/adminSignIn.js}"></script>
+<script th:src="@{/js/Sign_In/Up/AdminSignInSystem.js}"></script>
 </body>
 </html>
